# flsbasi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/spi/: __init__.py  ast.py  calculator.py  interpreter.py  lexer.py  parser.py  token.py
tests/unit/: test_calculator.py  test_interpreter.py
