[project]
name = "spi"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["functional", "simple", "Pascal", "interpreter"]
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
authors = [{name = "Carlos Les"}]
urls = {source = "https://github.com/carlosles/flsbasi"}
dependencies = []
dynamic = ["version", "description"]
[project.optional-dependencies]
test = ["hypothesis", "pytest"]  #"pytest-cov"
dev = [
    "pre-commit",
    "isort",
    "black",
    "ruff",
    "mypy",
    "spi[test]",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "spi.__version__"}
description = {file = "spi.__init__.__docstring__"}

[tool.setuptools.packages]
find = {where = ["src"], namespaces = false}

[tool.isort]
py_version = 310
profile = "black"
line_length = 90
filter_files = true

[tool.black]
target-version = ["py310"]
line-length = 90
include = '\.pyi?$'
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 90
#select = ["E", "F", "B", "Q"]
#[tool.ruff.per-file-ignores]
#"tests/*.py" = ["D205", "D400"]  # docstring formatting
#per-file-ignores = {"tests/*.py" = ["D205", "D400"]}
#flake8-quotes = {inline-quotes = "single", multiline-quotes = "single"}
#flake8-tidy-imports = {ban-relative-imports = "all"}
#isort = {combine-as-imports = true}
#fix = true

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ['(build/)', '(tests/)']
